--- a/betclient/package.json
+++ b/betclient/package.json
@@ -15,6 +15,8 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-datetime": "^3.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.26.0",
