--- a/betclient/package.json
+++ b/betclient/package.json
@@ -18,11 +18,14 @@
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-card-flip": "^1.2.3",
     "react-datetime": "^3.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.7.3",
+    "react-icons": "^5.5.0",
+    "react-joyride": "^2.9.3",
     "react-loading-indicators": "^1.0.1",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.26.0",
